--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,11 +4,13 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
 
-a {
-  color: inherit;
-  text-decoration: none;
+  /* for demo purposes */
+  min-height: 95vh;
+  min-width: 95vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 * {
